5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1875_1715.log
== TEST (2019-07-02 18:18:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
for i in range(m):
	for j in range(m):
		if m[i,j]==N:
			print("FOGO")
		elif m[i,j]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
for i in range(shape(m)):
	for j in range(shape(m)):
		if m[i,j]==N:
			print("FOGO")
		elif m[i,j]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
for i in range(shape[m]):
	for j in range(shape[m]):
		if m[i,j]==N:
			print("FOGO")
		elif m[i,j]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:23:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
for i in range(shape(m)):
	for j in range(shape[m]):
		if m[i,j]==N:
			print("FOGO")
		elif m[i,j]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
for i in range(3):
	for j in range(3):
		if m[i,j]==N:
			print("FOGO")
		elif m[i,j]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:26:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
for i in range(shape[0].m):
	for j in range(3):
		if m[i,:]==N:
			print("FOGO")
		elif m[i,j]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:27:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
s=shape[0].m
for i in range(s):
	for j in range(3):
		if m[i,:]==N:
			print("FOGO")
		elif m[i,j]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:37:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
s=shape[0].m
for i in range(s):
	for j in range(3):
		if m[i,:]==N:
			print("FOGO")
		elif m[i,j]==L:
			print("AGUA")		
-- EXECUTION TIME:
1.16577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1715/main.py", line 6, in <module>
    s=shape[0].m
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:39:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
s=m.shape[0]
for i in range(s):
	for j in range(3):
		if m[i,:]==N:
			print("FOGO")
		elif m[i,j]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:44:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
s=shape[0].m
for i in range(s):
	for j in range(s):
		if m[i,:]==N:
			print("FOGO")
		elif m[i,:]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:48:06) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
s=shape(m).[0]
for i in range(s):
	for j in range(s):
		if m[i,:]==N:
			print("FOGO")
		elif m[i,:]==L:
			print("AGUA")		
-- ERROR:
File "XXXX", line 6
    s=shape(m).[0]
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:48:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
s=shape(m)[0]
for i in range(s):
	for j in range(s):
		if m[i,:]==N:
			print("FOGO")
		elif m[i,:]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:51:12) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
for i in range(m.shape[0]):
	for j in range(shape(m)[0]):
		if m[i,:]==N:
			print("FOGO")
		elif m[i,:]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:51:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
for i in range(m.shape[0]):
	for j in range(m.shape[0]):
		if m[i,:]==N:
			print("FOGO")
		elif m[i,:]==L:
			print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:53:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
	if m[l,c]==N:
		print("FOGO")
	elif m[l,c]==L:
		print("AGUA")		
-- ERROR:
File "XXXX", line 6
    if m[l,c]==N:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:54:11) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
	if m[l,c]==N:
		print("FOGO")
	elif m[l,c]==L:
		print("AGUA")		
-- EXECUTION TIME:
0.797374
-- ERROR:
  File "/home/codebench/codes/1875/1715/main.py", line 6
    if m[l,c]==N:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:54:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
	if m[i,j]==N:
		print("FOGO")
	elif m[l,c]==L:
		print("AGUA")		
-- ERROR:
File "XXXX", line 6
    if m[i,j]==N:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:54:56) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
	if (m[l,c]==N):
		print("FOGO")
	elif (m[l,c]==L):
		print("AGUA")		
-- ERROR:
File "XXXX", line 6
    if (m[l,c]==N):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:56:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
	if (m[l,c]=="N"):
		print("FOGO")
	elif (m[l,c]=="L"):
		print("AGUA")		
-- ERROR:
File "XXXX", line 6
    if (m[l,c]=="N"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:56:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
	if (m[l,c]=="N"):
		print("FOGO")
	elif (m[l,c]=="L"):
		print("AGUA")		
-- ERROR:
File "XXXX", line 6
    if (m[l,c]=="N"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:57:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
if (m[l,c]=="N"):
	print("FOGO")
elif (m[l,c]=="L"):
	print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:58:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
if (m[l,c]=="N"):
	print("FOGO")
elif (m[l,c]=="L"):
	print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:58:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
if (m[l,c]=="N"):
	print("FOGO")
elif (m[l,c]=="L"):
	print("AGUA")		
-- EXECUTION TIME:
1.08923
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1715/main.py", line 6, in <module>
    if (m[l,c]=="N"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:58:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(input("matriz: "))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
if (m[l,c]=="N"):
	print("FOGO")
elif (m[l,c]=="L"):
	print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:02:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("matriz: ")))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
if (m[l,c]=="N"):
	print("FOGO")
elif (m[l,c]=="L"):
	print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:02:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("matriz: ")))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
if (m[l,c]=="N"):
	print("FOGO")
elif (m[l,c]=="L"):
	print("AGUA")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:02:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("matriz: ")))
l=int(input("numero da linha: "))
c=int(input("numero da coluna: "))
if (m[l,c]=="N"):
	print("FOGO")
elif (m[l,c]=="L"):
	print("AGUA")		
-- EXECUTION TIME:
1.0279
-- TEST CASE 1:
---- input:
[['L','N','L','L'],['N','N','L','L'],['N','N','L','N'],['N','L','L','L']]
3
2
---- correct output:
AGUA
---- user output:
AGUA
-- TEST CASE 2:
---- input:
[['N','L','L','N','N'],['N','N','N','N','N'],['L','L','N','L','N'],['N','L','N','N','N'],['N','L','N','L','N']]
3
4
---- correct output:
FOGO
---- user output:
FOGO
-- TEST CASE 3:
---- input:
[['L','L','N'],['N','L','L'],['L','N','L']]
2
2
---- correct output:
AGUA
---- user output:
AGUA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
